--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven.compiler.plugin.version}</version>
+                <version>3.8.1</version>
                 <inherited>true</inherited>
                 <configuration>
                   <release>11</release>
@@ -75,7 +75,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>com.dewarim.cinnamon.application.CinnamonServer</mainClass>
+                    <mainClass>test.debug.RootTest</mainClass>
                 </configuration>
             </plugin>
 
